# trading-platform

./: .gitignore  COMPLETE_PLATFORM_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  PHASE4_AUTHORIZATION_SUMMARY.md  PHASE5_AUDIT_LOGGING_SUMMARY.md  README.md  STATUS.md  TRADING_UI_SUMMARY.md
crates/api-gateway/: Cargo.toml  README.md
crates/api-gateway/src/: auth.rs  lib.rs  market.rs  middleware.rs  rest.rs  websocket.rs
crates/auth-service/: AUTH_PROGRESS.md  AUTH_SERVICE_SUMMARY.md  Cargo.toml  JWT_VALIDATION_SUMMARY.md  REVOCATION_SUMMARY.md  WEBAUTHN_SUMMARY.md
crates/auth-service/src/: hardware_signer.rs  lib.rs
crates/auth-service/src/audit/: correlation.rs  events.rs  logger.rs  middleware.rs  mod.rs
crates/auth-service/src/authz/: abac.rs  checker.rs  mod.rs  policy.rs  rbac.rs  types.rs
crates/auth-service/src/crypto/: key_manager.rs  kms_client.rs  mod.rs  signer.rs
crates/auth-service/src/domain/: claims.rs  mod.rs  session.rs  token.rs  user.rs
crates/auth-service/src/jwt/: generator.rs  mod.rs  validator.rs
crates/auth-service/src/replay/: detector.rs  mod.rs  nonce_store.rs
crates/auth-service/src/revocation/: mod.rs  postgres_store.rs  redis_store.rs  store.rs
crates/auth-service/src/risk/: adaptive_policy.rs  anomaly.rs  behavioral.rs  device_reputation.rs  mod.rs  scoring.rs
crates/auth-service/src/webauthn/: authentication.rs  challenge.rs  credential_store.rs  mod.rs  registration.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  traits.rs  types.rs
crates/event-journal/: Cargo.toml
crates/event-journal/src/: events.rs  file_journal.rs  journal.rs  lib.rs
crates/kafka-adapter/: Cargo.toml  README.md
crates/kafka-adapter/src/: consumer.rs  kafka_journal.rs  lib.rs  producer.rs
crates/ledger/: Cargo.toml  README.md
crates/ledger/src/: account.rs  lib.rs  transaction.rs
crates/liquidation-engine/: Cargo.toml  README.md
crates/liquidation-engine/src/: lib.rs  liquidator.rs  monitor.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: aggregator.rs  binance.rs  coingecko.rs  lib.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/benches/: orderbook_bench.rs
crates/matching-engine/src/: engine.rs  lib.rs  orderbook.rs  price_level.rs
crates/postgres-adapter/: Cargo.toml
crates/postgres-adapter/src/: connection.rs  ledger_store.rs  lib.rs
crates/redis-adapter/: Cargo.toml
crates/redis-adapter/src/: cache.rs  connection.rs  lib.rs
crates/risk-engine/: Cargo.toml
crates/risk-engine/src/: adaptive_risk_engine.rs  lib.rs  position_tracker.rs
crates/trading-server/: Cargo.toml
crates/trading-server/src/: main.rs
examples/: demo.rs  server.rs
trading-ui/: .env.local.example  README.md  next.config.mjs  package.json  tailwind.config.ts
trading-ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
trading-ui/app/account/: page.tsx
trading-ui/app/login/: page.tsx
trading-ui/app/register/: page.tsx
trading-ui/components/: ProtectedRoute.tsx
trading-ui/components/trading/: CandlestickChart.tsx  MarketStats.tsx  MarketTicker.tsx  OrderForm.tsx  Orderbook.tsx  PriceChart.tsx  TradeHistory.tsx  TradingDashboard.tsx
trading-ui/components/ui/: Header.tsx
trading-ui/hooks/: useAuth.tsx  useWebSocket.ts
trading-ui/lib/: api.ts  auth.ts  utils.ts  websocket.ts
trading-ui/types/: index.ts
