[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
matching-engine = { workspace = true }
risk-engine = { workspace = true }
ledger = { workspace = true }
event-journal = { workspace = true }
auth-service = { workspace = true }
market-data = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.10"
