[package]
name = "event-journal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.10"
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
