[package]
name = "liquidation-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
matching-engine = { workspace = true }
risk-engine = { workspace = true }
event-journal = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
dashmap = "6.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
rust_decimal_macros = "1.33"
