[package]
name = "postgres-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
ledger = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
