[package]
name = "trading-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trading-server"
path = "src/main.rs"

[dependencies]
# Workspace crates
api-gateway = { workspace = true }
matching-engine = { workspace = true }
event-journal = { workspace = true }
risk-engine = { workspace = true }
market-data = { workspace = true }
common = { workspace = true }

# External dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
